# my_beginner_tutorials

./: README.md  compile_commands.json
.cache/clangd/index/: publisher_member_function.cpp.41B3BF293086A417.idx  publisher_member_function.cpp.83B06410B85CBEF1.idx  subscriber_member_function.cpp.0E17B1F58A9184FC.idx  subscriber_member_function.cpp.8DD23055427333E5.idx  test_talker.cpp.98525D24096DFADE.idx
install/: local_setup.sh  setup.sh
install/beginner_tutorials/lib/beginner_tutorials/: listener  talker
install/beginner_tutorials/share/ament_index/resource_index/package_run_dependencies/: beginner_tutorials
install/beginner_tutorials/share/beginner_tutorials/: package.sh  package.xml
install/beginner_tutorials/share/beginner_tutorials/launch/: minimal_pubsub_launch.py  ros_bag_launch.py
install/integration_test/lib/integration_test/: integration_test_node  service_server
install/integration_test/share/integration_test/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_test
result/Assignment3/ros2_bag_20241115_174930/: metadata.yaml  ros2_bag_20241115_174930_0.db3
result/Assignment3/ros2_bag_20241115_191149/: metadata.yaml  ros2_bag_20241115_191149_0.db3
src/beginner_tutorials/: CMakeLists.txt  LICENSE  package.xml
src/beginner_tutorials/launch/: minimal_pubsub_launch.py  ros_bag_launch.py
src/beginner_tutorials/src/: publisher_member_function.cpp  subscriber_member_function.cpp
src/beginner_tutorials/test/: test_talker.cpp
